<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.androidbootcamp.tickethub.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="331dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="3dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/txtTitle"
        android:text="@string/txtTitle"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/txtTitle" />

    <ImageView
        android:id="@+id/imgDescription"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="6dp"
        android:background="@string/imgDescription"
        android:contentDescription="@string/imgDescription"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGroup"
        app:srcCompat="@drawable/tobymacconcert" />

    <Button
        android:id="@+id/btnCost"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:contentDescription="@string/btnCost"
        android:text="@string/btnCost"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtResult"
        app:layout_constraintStart_toStartOf="@+id/txtResult"
        app:layout_constraintTop_toBottomOf="@+id/txtResult"
        tools:text="@string/btnCost" />

    <EditText
        android:id="@+id/txtTickets"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="49dp"
        android:layout_marginStart="49dp"
        android:ems="10"
        android:hint="@string/txtTickets"
        android:inputType="number"
        android:textColor="@android:color/background_light"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <Spinner
        android:id="@+id/txtGroup"
        android:layout_width="0dp"
        android:layout_height="83dp"
        android:layout_marginBottom="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:entries="@array/txtGroup"
        android:popupBackground="@color/colorAccent"
        android:prompt="@string/prompt"
        app:layout_constraintBottom_toTopOf="@+id/imgDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTickets" />

</android.support.constraint.ConstraintLayout>
